<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright (C) 2012 Paul Burke
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<resources>
    <string name="app_name">동영상 따라하기</string>
    <string name="action_settings">Settings</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_request_camera">카메라사용에 대한 허가를 요청합니다.</string>
    <string name="permission_request_file">저장소사용에 대한 허가를 요청합니다.</string>
    <string name="camera_error">현재 사용되어진 기기는 카메라가 지원되지 않는 기기입니다.</string>
    <string name="like">유용한 정보입니다. 추천드려요</string>
    <string name="facebook">페이스북 계정으로 로그인</string>
    <string name="googleaccount">구글계정으로 로그인</string>
    <string name="kakao">카카오계정으로 로그인</string>
    <string name="chooser_title">동영상 불러오기</string>
    <string name="apptest"> 현재 이 앱은 테스트 중에 있습니다. \n아직 개발과 수정이 이루어 지고 있으니 \n정식버전이 출시되기 전까지 \n많은 관심과 피드백을 부탁드리며 \n주변분들에게 널리 알려주시기 바랍니다.</string>
    <string name="empty_directory">빈 디렉토리</string>
    <string name="youtube_search">유튜브 동영상 검색</string>
    <string name="vimeo_search">Vimeo 동영상 검색</string>
    <string name="youtube_url">유튜브 동영상 URL 입력</string>
    <string name="vimeo_url">Vimeo 동영상 URL 입력</string>
    <string name="test_server_client_id">669763084628-ei3h7tsecic687lsiokoh6jifoghdc1l.apps.googleusercontent.com</string>
    <string name="server_client_id">669763084628-1ek5dvhohsa9vcoheksedq2ct6sq9lp0.apps.googleusercontent.com</string>
    <string name="web_client_id">669763084628-th6pt9qiplfag9asasjb5p822cbk2592.apps.googleusercontent.com</string>
    <string name="API_key">AIzaSyCYPFWdlydMAZtuoQaj7dmOk4VjQYJDK94</string>
    <string name="Server_API_key">AIzaSyD-GHRyRHTF2ijQ_x51h1yeTYAf7X1AZYQ</string>
    <string name="default_sign_in_button">구글 계정과 연동 합니다.</string>
    <string name="custom_sign_in_button">다른 구글 계정으로 연동합니다.</string>
    <string name="sign_in">로그인</string>
    <string name="sign_out">로그아웃</string>
    <string name="search">검색</string>
    <string name="failed">유튜브 계정연결에 실패했습니다</string>
    <string name="permission_request">카메라사용에 대한 허가를 요청합니다.</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="menu">menu</string>
    <string name="pesnaldatarefresh">사용자 데이터 새로고침</string>
    <string name="accountchange">계정바꾸기</string>
    <string name="request_permission">카메라에 대한 사용을 요청합니다.</string>
    <string name="upload">데이터 업로드</string>
    <string name="play">재생</string>
    <string name="url_play">재생하고자 하시는 동영상의 URL을 입력하여 주세요</string>
    <string name="search_text">검색하고자 하는 단어를 입력하여 주세요</string>
    <string name="Vimeo_API_key">b844f6b0dc690b284f4fce4922ae3803215cc545</string>
</resources>